# hypertrade

./: .env.example  .gitignore  CHANGELOG.md  README.md  hypertrade-prod.fish  hypertrade-prod.sh  hypertrade-test.fish  hypertrade-test.sh  hypertrade.db  pyproject.toml  requirements.txt
.github/workflows/: pylint.yml
deploy/: hypertrade.service
docs/: TECH_DEBT.md  tradingview-webhook.md
docs/superpowers/plans/: 2026-06-18-webhook-idempotency.md  2026-06-19-bounded-history-retention.md  2026-06-19-setup-wizard.md  2026-06-20-history-auth.md  2026-06-21-dry-run-mode.md  2026-06-28-order-failure-logging.md
docs/superpowers/specs/: 2026-06-18-webhook-idempotency-design.md  2026-06-19-setup-wizard-design.md  (+4 more)
hypertrade/: __init__.py  __main__.py  config.py  daemon.py  database.py  exception_handlers.py  idempotency.py  logging.py  notify.py  security.py  setup.py  sqlite_util.py  version.py
hypertrade/middleware/: content_limit.py  logging.py  rate_limit.py
hypertrade/routes/: admin.py  health.py  hyperliquid_data_client.py  hyperliquid_errors.py  hyperliquid_execution_client.py  hyperliquid_service.py  tradingview_enums.py  webhooks.py
hypertrade/schemas/: __init__.py  telegram.py  tradingview.py  tradingview_schema.py
tests/: test_cloid_idempotency.py  test_config.py  test_db_retention.py  test_execution_client_cloid.py  test_execution_client_price.py  test_health.py  test_hyperliquid_client.py  test_hyperliquid_data_client.py  test_hyperliquid_errors.py  test_hyperliquid_service.py  test_idempotency.py  test_idempotency_sweep.py  test_logging_context.py  test_security.py  test_setup.py  test_sqlite_connection.py  test_subaccount.py  test_version.py  test_webhook.py
