[project]
name = "hypertrade"
version = "0.1.0"
description = "HyperTrade: A trading bot for HyperLiquid."
authors = [{ name = "GDavassi" }]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  # Cap below the next major: a v3 of either could change how List[str] env
  # vars are decoded (see tests/test_config.py), so pin to avoid silent breakage.
  "pydantic>=2.7.0,<3",
  "pydantic-settings>=2.2.1,<3",
  "python-dotenv>=1.0.0",
  "jsonschema>=4.19.0",
  # Pin exactly: this SDK breaks across minors (0.21 init IndexError on current
  # meta, 0.24 wire-encoder rejects Decimal sizes). Known-good = 0.24.0 paired with
  # the float-cast of the order size in hyperliquid_service / execution_client.
  "hyperliquid-python-sdk==0.24.0",
  "eth-account>=0.9.0",
]

[project.optional-dependencies]
dev = []

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
addopts = "-q"
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = "."

[tool.setuptools]
packages = ["hypertrade"]
